Fixed UI alignment

--- a/public/css/styleFilters.css
+++ b/public/css/styleFilters.css
@@ -421,6 +421,8 @@ a:not([href]):not([tabindex]){
 }
 
 #semi-circle{
+  background: #9e978e;
+  display: inline-block;
   width: 180px;
   height: 60px;
   border-width: 15px;
